# prochrome.nvim

./: .gitignore  Cargo.toml  Readme.md  build.lua  flake.nix  install.sh  stylua.toml
.github/workflows/: release.yml
lua/: dev.lua
lua/prochrome/: init.lua
lua/telescope/_extensions/: prochrome.lua
lua/telescope/extensions_/: prochrome.lua
src/: lib.rs  main.rs
tools/: cargo-lua  dev.lua  test
