[package]
name = "prochrome_internals"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.3", features = ["neovim-nightly"] }
headless_chrome = { git = "https://github.com/dimchee/rust-headless-chrome.git", default_features = false }
thiserror = "1.0"
anyhow = "1.0"
serde = "1.0"
